--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,28 @@
 # DATASOURCE
-spring.datasource.url=jdbc:h2:~/exemplo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
+# spring.datasource.url=jdbc:h2:~/exemplo
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=sa
 
 # H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
 # JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.hibernate.ddl-auto=update
+
+
+#  MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/Condominio?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# JPA
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+# spring.jpa.open-in-view=true
+# spring.jpa.database-platform=org.hibernate.dialect.MySqlDialect
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
